--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>L.H.L The Data and more PortFolio<br />
 						</h1>
-						<p>Data Analysis, Data Science and more skilled in Python <a href="http://linkedin.com/in/lan-lam-hai-2338a940">@L.H.L</a> <br />
+						<p>Data Analysis, Data Science and more skilled in Python <a href="#"> </a> <br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
