--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>L.H.L The Data and more PortFolio<br />
+						<h1>L.H.L Data and more PortFolio<br />
 						</h1>
 						<p>Data Analysis, Data Science and more skilled in Python <a href="#"> </a> <br />
 						</p>
