--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">L.H.L The D.A ; D.S & more</a>
+						<a href="index.html" class="logo">L.H.L D.A ; D.S & more</a>
 					</header>
 
 				<!-- Nav -->
