--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>L.H.L Data and more PortFolio<br />
+						<h1> Data Analysis and more PortFolio <br />
 						</h1>
-						<p>Data Analysis, Data Science and more skilled in Python <a href="#"> </a> <br />
+						<p> Data Analysis, Data Science and more <a href="#"> </a> <br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">L.H.L D.A ; D.S & more</a>
+						<a href="index.html" class="logo">D.A ; D.S & more</a>
 					</header>
 
 				<!-- Nav -->
@@ -124,10 +124,7 @@
 								<p>Ha Noi, Viet Nam<br />
 								 10000</p>
 							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(0084) xxx-xxx-xxx</a></p>
-							</section>
+							
 							<section>
 								<h3>Email</h3>
 								<p><a href="#">lamhailan@gmail.com</a></p>
