--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 
 						</ul>
+						<ul class="links">
+							<li class="active"><a href="index.html">Others</a></li>
+							
+							<!-- <li><a href="generic.html">Generic Page</a></li> -->
+							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
+
+						</ul>
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
