--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 						</ul>
 						<ul class="links">
-							<li class="active"><a href="index.html">Others</a></li>
+							<li class="passive"><a href="index.html">Others</a></li>
 							
 							<!-- <li><a href="generic.html">Generic Page</a></li> -->
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
