--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									
 									<h2><a href="#">Data Analysis, Data Science in Python and more<br />
 									</a></h2>
-									<p>Using python and others tools to gain insignt the data.</p>
+									<p>Using python and others tools to gain valuable insignt from data.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/hoami.jpg" alt="" /></a>
 								<ul class="actions special">
