--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 								</article>
 								<article>
 									<header>
-										<!-- <span class="date">October 29, 2023</span> -->
-										<h2><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing">Amazon - AMZN Stock Price prediction<br />
+										<!-- <span class="date">December 12, 2023</span> -->
+										<h2><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing">Amazon Stock Price prediction<br />
 										</a></h2>
 									</header>
 									<a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
-									<p>Using Python, Facebook Prophet to predict Amazon Stock.</p>
+									<p>Using Facebook Prophet to predict Amazon Stock Price.</p>
 									<ul class="actions special">
 										<li><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing" class="button">View Project</a></li>
 									</ul>
