--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/L-H-L/HR_Analytics_using-Python" class="image fit"><img src="images/hr.jpg" alt="" /></a>
-									<p>Using Python to analysis the human resource.</p>
+									<p>Using Python to analyse the human resource.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/L-H-L/HR_Analytics_using-Python" class="button">View Project</a></li>
 									</ul>
