--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<article>
 									<header>
 										<!-- <span class="date">December 12, 2023</span> -->
-										<h2><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing">Amazon Stock Price prediction<br />
+										<h2><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing">Stock Price prediction<br />
 										</a></h2>
 									</header>
 									<a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
