--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Data Analysis, Data Science in Python and more<br />
+									<h2><a href="#">Data Analysis, Data Science and more in Python<br />
 									</a></h2>
 									<p>Using python and others tools to gain valuable insignt from data.</p>
 								</header>
