--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 								<article>
 									<header>
 										<!-- <span class="date">December 12, 2023</span> -->
-										<h2><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing">Stock Price prediction<br />
+										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet">Stock Price prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
+									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
 									<p>Using Facebook Prophet to predict Amazon Stock Price.</p>
 									<ul class="actions special">
-										<li><a href="https://colab.research.google.com/drive/1CT2oo9Zjf2buPIcTFaX7ls78SU902Qev?usp=sharing" class="button">View Project</a></li>
+										<li><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
