--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> Data Analysis and more PortFolio <br />
+						<h1> Data Project PortFolio <br />
 						</h1>
 						<p> Data Analysis, Data Science and more <a href="#"> </a> <br />
 						</p>
@@ -59,7 +59,7 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">Data Analysis, Data Science and more in Python<br />
+									<h2><a href="#">Data Analysis, Data Science and more <br />
 									</a></h2>
 									<p>Using python and others tools to gain valuable insignt from data.</p>
 								</header>
