--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> Data Project PortFolio <br />
+						<h1> Data Projects PortFolio <br />
 						</h1>
 						<p> Data Analysis, Data Science and more <a href="#"> </a> <br />
 						</p>
