--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<h2><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI">Sales Data Analysis Report<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="image fit"><img src="images/sales.png" alt="" /></a>
+									<a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="image fit"><img src="images/sales.jpg" alt="" /></a>
 									<p>Using Power BI to exploring the data and report.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="button">View Project</a></li>
@@ -89,7 +89,7 @@
 										<h2><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python">Diabetes Patients Prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python" class="image fit"><img src="images/Diabetes.jpeg" alt="" /></a>
+									<a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python" class="image fit"><img src="images/Diabetes.jpg" alt="" /></a>
 									<p>Using Python to predict diabetes patients.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python" class="button">View Project</a></li>
