--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="image fit"><img src="images/sales.jpg" alt="" /></a>
-									<p>Using Power BI to exploring the data and report.</p>
+									<p>Using Power BI to explore the data and report.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="button">View Project</a></li>
 									</ul>
@@ -110,7 +110,7 @@
 								<article>
 									<header>
 										<!-- <span class="date">December 12, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet">Stock Price prediction<br />
+										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet">Stock Price Prediction<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
