--- a/index.html
+++ b/index.html
@@ -74,50 +74,50 @@
 								<article>
 									<header>
 										<!-- <span class="date">October 14, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI">Sales Data Analysis Report<br />
+										<h2><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI/blob/main/SalesDataAnalysis_Report-final.pdf">Sales Data Analysis Report<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="image fit"><img src="images/sales.jpg" alt="" /></a>
+									<a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI/blob/main/SalesDataAnalysis_Report-final.pdf" class="image fit"><img src="images/sales.jpg" alt="" /></a>
 									<p>Using Power BI to explore the data and report.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI" class="button">View Project</a></li>
+										<li><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI/blob/main/SalesDataAnalysis_Report-final.pdf" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">October 29, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/HR_Analytics_using-Python">HR Analytics<br />
+										<h2><a href="https://github.com/L-H-L/HR_Analytics_using-Python/blob/main/HR%20Employees%20Attrition%20Analytics-final.pdf">HR Analytics<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/HR_Analytics_using-Python" class="image fit"><img src="images/hr.jpg" alt="" /></a>
+									<a href="https://github.com/L-H-L/HR_Analytics_using-Python/blob/main/HR%20Employees%20Attrition%20Analytics-final.pdf" class="image fit"><img src="images/hr.jpg" alt="" /></a>
 									<p>Using Python to analyse the human resource.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/HR_Analytics_using-Python" class="button">View Project</a></li>
+										<li><a href="https://github.com/L-H-L/HR_Analytics_using-Python/blob/main/HR%20Employees%20Attrition%20Analytics-final.pdf" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">October 29, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python">Diabetes Patients Prediction<br />
+										<h2><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python/blob/main/Diabetes_Patients_02-final.pdf">Diabetes Patients Prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python" class="image fit"><img src="images/Diabetes.jpg" alt="" /></a>
+									<a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python/blob/main/Diabetes_Patients_02-final.pdf" class="image fit"><img src="images/Diabetes.jpg" alt="" /></a>
 									<p>Using Python to predict diabetes patients.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python" class="button">View Project</a></li>
+										<li><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python/blob/main/Diabetes_Patients_02-final.pdf" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
 								<article>
 									<header>
 										<!-- <span class="date">December 12, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet">Stock Price Prediction<br />
+										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon%20-%20AMZN%20Stock%20Price%20prediction%20using%20Facebook%20Prophet.pdf">Stock Price Prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
+									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon%20-%20AMZN%20Stock%20Price%20prediction%20using%20Facebook%20Prophet.pdf" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
 									<p>Using Facebook Prophet to predict Amazon Stock Price.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet" class="button">View Project</a></li>
+										<li><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon%20-%20AMZN%20Stock%20Price%20prediction%20using%20Facebook%20Prophet.pdf" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
@@ -174,3 +174,4 @@
 
 	</body>
 </html>
+
