--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 								<article>
 									<header>
 										<!-- <span class="date">December 12, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon%20-%20AMZN%20Stock%20Price%20prediction%20using%20Facebook%20Prophet.pdf">Stock Price Prediction<br />
+										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon-AMZNStockPricePredictionUsingFacebookProphet.html">Stock Price Prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon%20-%20AMZN%20Stock%20Price%20prediction%20using%20Facebook%20Prophet.pdf" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
+									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon-AMZNStockPricePredictionUsingFacebookProphet.html" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
 									<p>Using Facebook Prophet to predict Amazon Stock Price.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon%20-%20AMZN%20Stock%20Price%20prediction%20using%20Facebook%20Prophet.pdf" class="button">View Project</a></li>
+										<li><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon-AMZNStockPricePredictionUsingFacebookProphet.html" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
@@ -174,4 +174,5 @@
 
 	</body>
 </html>
+
 
