--- a/index.html
+++ b/index.html
@@ -74,50 +74,50 @@
 								<article>
 									<header>
 										<!-- <span class="date">October 14, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI/blob/main/SalesDataAnalysis_Report-final.pdf">Sales Data Analysis Report<br />
+										<h2><a href="https://drive.google.com/file/d/1M7C83Gq1v7MVlCMAg8XEG_joZ89Rem7O/view?usp=sharing">Sales Data Analysis Report<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI/blob/main/SalesDataAnalysis_Report-final.pdf" class="image fit"><img src="images/sales.jpg" alt="" /></a>
+									<a href="https://drive.google.com/file/d/1M7C83Gq1v7MVlCMAg8XEG_joZ89Rem7O/view?usp=sharing" class="image fit"><img src="images/sales.jpg" alt="" /></a>
 									<p>Using Power BI to explore the data and report.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Sales_Data_Analysis_using_Power-BI/blob/main/SalesDataAnalysis_Report-final.pdf" class="button">View Project</a></li>
+										<li><a href="https://drive.google.com/file/d/1M7C83Gq1v7MVlCMAg8XEG_joZ89Rem7O/view?usp=sharing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">October 29, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/HR_Analytics_using-Python/blob/main/HR%20Employees%20Attrition%20Analytics-final.pdf">HR Analytics<br />
+										<h2><a href="https://drive.google.com/file/d/1uHO-w1_xBq87YhlOZgSnNhfHYjE4ax5l/view?usp=sharing">HR Analytics<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/HR_Analytics_using-Python/blob/main/HR%20Employees%20Attrition%20Analytics-final.pdf" class="image fit"><img src="images/hr.jpg" alt="" /></a>
+									<a href="https://drive.google.com/file/d/1uHO-w1_xBq87YhlOZgSnNhfHYjE4ax5l/view?usp=sharing" class="image fit"><img src="images/hr.jpg" alt="" /></a>
 									<p>Using Python to analyse the human resource.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/HR_Analytics_using-Python/blob/main/HR%20Employees%20Attrition%20Analytics-final.pdf" class="button">View Project</a></li>
+										<li><a href="https://drive.google.com/file/d/1uHO-w1_xBq87YhlOZgSnNhfHYjE4ax5l/view?usp=sharing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!-- <span class="date">October 29, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python/blob/main/Diabetes_Patients_02-final.pdf">Diabetes Patients Prediction<br />
+										<h2><a href="https://drive.google.com/file/d/1smfl3X6pnPqAVoGaZs-OrUzjAA-2Zlq6/view?usp=sharing">Diabetes Patients Prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python/blob/main/Diabetes_Patients_02-final.pdf" class="image fit"><img src="images/Diabetes.jpg" alt="" /></a>
+									<a href="https://drive.google.com/file/d/1smfl3X6pnPqAVoGaZs-OrUzjAA-2Zlq6/view?usp=sharing" class="image fit"><img src="images/Diabetes.jpg" alt="" /></a>
 									<p>Using Python to predict diabetes patients.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Diabetes_Patients_Prediction_using-Python/blob/main/Diabetes_Patients_02-final.pdf" class="button">View Project</a></li>
+										<li><a href="https://drive.google.com/file/d/1smfl3X6pnPqAVoGaZs-OrUzjAA-2Zlq6/view?usp=sharing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
 								<article>
 									<header>
 										<!-- <span class="date">December 12, 2023</span> -->
-										<h2><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon-AMZNStockPricePredictionUsingFacebookProphet.html">Stock Price Prediction<br />
+										<h2><a href="https://drive.google.com/file/d/1qoMWBGkhujCFS4Jo38G88IdTe1xjT8SP/view?usp=sharing">Stock Price Prediction<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon-AMZNStockPricePredictionUsingFacebookProphet.html" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
+									<a href="https://drive.google.com/file/d/1qoMWBGkhujCFS4Jo38G88IdTe1xjT8SP/view?usp=sharing" class="image fit"><img src="images/Amazon.jpg" alt="" /></a>
 									<p>Using Facebook Prophet to predict Amazon Stock Price.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/L-H-L/Amazon---AMZN-Stock-Price-prediction-using-Facebook-Prophet/blob/main/Amazon-AMZNStockPricePredictionUsingFacebookProphet.html" class="button">View Project</a></li>
+										<li><a href="https://drive.google.com/file/d/1qoMWBGkhujCFS4Jo38G88IdTe1xjT8SP/view?usp=sharing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
@@ -174,5 +174,4 @@
 
 	</body>
 </html>
-
 
